<resources>
    <string name="app_name">android-second-assignment</string>
    <string name="movie">Movies</string>
    <string name="reg_movie">Register Movie</string>
    <string name="dis_movie">Display Movies</string>
    <string name="fav">Favourites</string>
    <string name="edit_movie">Edit Movies</string>
    <string name="search">Search</string>
    <string name="rating">Ratings</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="actor">Actors/Actresses</string>
    <string name="review">Review</string>
    <string name="addFav">Add to Favourites</string>
    <string name="edit_movie_item">Edit Movie</string>
    <string name="update">Update</string>
    <string name="rb_fav">Favourite</string>
    <string name="rb_nfav">Not Favourite</string>
    <string name="searchImdb">Find movie in IMDB</string>
    <string name="lookUp">Lookup</string>
</resources>