<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActRegisterMovie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_movie"
                android:textColor="@color/teal_200"
                android:layout_marginBottom="40dp"
                android:textSize="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/title"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/title"
                    android:inputType="text"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/year"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/year"
                    android:inputType="number"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/director"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/director"
                    android:inputType="text"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/actor"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/actor"
                    android:inputType="text"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/rating"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/rate"
                    android:inputType="number"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/review"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/review"
                    android:inputType="text"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp">

               <Button
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:onClick="save"
                   android:text="@string/save"/>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>